# extract-frames

./: .env.example  .gitignore  BADGES.md  CONTRIBUTING.md  Cargo.toml  README.md  gen.sh  hoox.yaml  justfile  lefthook.yml  llmfile  rustfmt.toml
.cargo/: audit.toml
.github/: .markdownlint.yaml  PULL_REQUEST_TEMPLATE.md  build_docs.sh  dependabot.yaml
.github/workflows/: audit.yaml  audit.yml  check-links.yml  markdown-check.yaml  markdown-check.yml  test.yaml  test.yml  update-deps.yaml  update-deps.yml
.llms/inference/: hf.py
.llms/prompts/: code_review.md  enhance_readme.md  enhance_tests.md  grammar_check.md  improve_comments.md  non_idiomatic.md  not_tested.md
docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/extract_frames/: all.html  constant.FRAMES_BETWEEN_EXTRACTED.html  constant.FRAME_FILES_PATTERN.html  constant.SEGMENTED_FILES_PATTERN.html  constant.SEGMENT_DURATION_SECONDS.html  constant.SEGMENT_OUTPUT_PATTERN.html  fn.cleanup_temporary_files.html  fn.decode_frames_dropping.html  fn.decode_frames_seeking.html  fn.get_files.html  fn.main.html  fn.remove_files.html  fn.remove_folder.html  fn.save_rgb_to_image.html  fn.split_into_segments.html  index.html  sidebar-items.js  struct.Args.html
docs/search.desc/extract_frames/: extract_frames-desc-0-.js
docs/src/extract_frames/: main.rs.html
docs/trait.impl/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js
docs/trait.impl/core/fmt/: trait.Debug.js
docs/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
docs/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: main.rs
src/tests/: mod.rs
