[package]
name = "extract-frames"
version = "0.2.5"
edition = "2024"
description = "CLI tool for extracting frames from videos"
authors = [
  "Yehor Smoliakov <egorsmkv@gmail.com>",
]
keywords = ["ffmpeg", "video"]
categories = ["command-line-utilities"]
repository = "https://github.com/RustedBytes/extract-frames"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
glob = "0.3.3"
ffmpeg-next = { version = "^8.0", features = ["static", "build"] }
image = { version = "0.25", features = ["jpeg"] }
log = "0.4.28"
ndarray = "0.16.1"
num-traits = "0.2.19"
rayon = "1.11.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
video-rs = { version = "0.10.4", features = ["ndarray"] }

[dev-dependencies]
tempfile = "3.23.0"

[profile.dev]
debug = false

[profile.release]
debug = false
strip = true
