[package]
name = "extract-frames"
version = "0.3.0"
edition = "2024"
description = "CLI tool for extracting frames from videos"
authors = [
  "Yehor Smoliakov <egorsmkv@gmail.com>",
]
keywords = ["ffmpeg", "video"]
categories = ["command-line-utilities"]
repository = "https://github.com/RustedBytes/extract-frames"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
glob = "0.3.3"
ffmpeg-next = { version = "^8.1", features = ["static", "build"] }
image = { version = "0.25", features = ["jpeg"] }
log = "0.4.33"
ndarray = "0.17.2"
num-traits = "0.2.19"
oxipng = { version = "10.1.1", default-features = false }
rayon = "1.12.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
video-rs = { version = "0.11.0", features = ["ndarray"] }

[dev-dependencies]
tempfile = "3.27.0"

[profile.dev]
debug = false

[profile.release]
debug = false
strip = true
